Closed
Bug 1547082
Opened 2 years ago
Closed 2 years ago
Simulate latency and bandwidth of a cloud based replaying child
Categories
(Core Graveyard :: Web Replay, defect)
Core Graveyard
Web Replay
Tracking
(firefox68 fixed)
RESOLVED
FIXED
mozilla68
Tracking | Status | |
---|---|---|
firefox68 | --- | fixed |
People
(Reporter: bhackett1024, Assigned: bhackett1024)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Optimizing for a cloud based architecture must account for the latency and bandwidth present when communicating with a distant machine. A single machine can simulate the cloud experience (except for having fewer available cores) by introducing appropriate delays in the communication channel between the middleman and the replaying processes. Implementing this will make it easier to test expected behavior in cloud based interactions and guide optimization efforts.
Assignee | ||
Comment 1•2 years ago
|
||
Pushed by bhackett@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a7ff9b445c9c Allow simulating the latency and bandwidth when communicating with a cloud based replaying process, r=loganfsmyth.
Comment 3•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox68:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Assignee: nobody → bhackett1024
Updated•11 months ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•