Bug 1547082 - Allow simulating the latency and bandwidth when communicating with a cloud based replaying process, r=loganfsmyth.

Differential Revision: https://phabricator.services.mozilla.com/D29107